# server/routes/routes.js
@@ -72,6 +72,11 @@ import {
   resetPassword, updatePassword,
 } from "../controller/forgot.js";
 
+import { 
+  createComentario,
+  showComentarios 
+} from "../controller/comentarios.js";
+
 // init express router
 const router = express.Router();
 
@@ -201,6 +206,10 @@ router.put("/acomodacao/:id", updateAcomodacao);
 
 // rota para deletar uma acomodacao
 router.delete("/acomodacao/:id", deleteAcomodacao);
+
+router.get("/comentarios", showComentarios);
+
+router.post("/novoComentario", createComentario)
 
 // export do router
 export default router;
